# Image-Processor

./: CMakeLists.txt  Image.cpp  Image.h  help.cpp  help.h  image_processor  image_processor.cpp
filters/: all_filters.h  base_filter.cpp  base_filter.h  blur.cpp  blur.h  crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  grayscale.cpp  grayscale.h  negative.cpp  negative.h  sharpening.cpp  sharpening.h
in_out/: bmp_utils.cpp  bmp_utils.h
parsing/: parsing_command_line.cpp  parsing_command_line.h
